Xtra Pages for categories

--- a/Categories.html
+++ b/Categories.html
@@ -78,7 +78,7 @@
               <h4>Manga</h4></a>
           </div>
           <div class="cards">
-              <a href="List.html"><img src="HP/Romance.jpeg" alt="">
+              <a href="Romance.html"><img src="HP/Romance.jpeg" alt="">
                   <h4>Romance</h4></a>
             </div>
           <div class="cards">
