--- a/Categories.html
+++ b/Categories.html
@@ -46,11 +46,11 @@
         <h2 class="title">All Categories</h2>
         <div class="categories">
             <div  class="cards">
-                <a href="List.html"><img src="HP/Action.jpeg" alt="">
+                <a href="Adv.html"><img src="HP/Action.jpeg" alt="">
                 <h4>Action and Adventure</h4></a>
             </div>
             <div class="cards">
-                <a href="List.html"><img src="HP/Dune.jpg" alt="">
+                <a href="Sci.html"><img src="HP/Dune.jpg" alt="">
                 <h4>Science Fiction (Sci-Fi)</h4></a>
             </div>
             <div class="cards">
