--- a/Public/HTML/Categories.html
+++ b/Public/HTML/Categories.html
@@ -45,56 +45,56 @@
   <main>
     <h2 class="title">All Categories</h2>
     <div class="categories">
-      <div class="cards">
-        <a href="Adv.html"><img src="/Images/Action.jpeg" alt="">
+      <form class="cards" action='/Section' method="post">
+        <input class="img" type="submit" style="background-image:url(/Images/Action.jpeg);" value="" >
+          <input type="hidden" name="category" value="Adventure">
           <h4>Action and Adventure</h4>
-        </a>
-      </div>
-      <div class="cards">
-        <a href="Sci.html"><img src="/Images/Dune.jpg" alt="">
+        </form class="cards" action='/Section' method="post">
+        <form class="cards" action='/Section' method="post" >
+          <input class="img" type="submit" style="background-image:url(/Images/Dune.jpg);" value="" >
+          <input type="hidden" name="category" value="Sci Fi">
           <h4>Science Fiction (Sci-Fi)</h4>
-        </a>
-      </div>
-      <div class="cards">
-        <a href="List.html"><img src="/Images/Horror.jpg" alt="">
+        </form>
+        <form class="cards" action='/Section' method="post" >
+          <input class="img" type="submit" style="background-image:url(/Images/Horror.jpg);" value="" >
+          <input type="hidden" name="category" value="Horror">
           <h4>Horror</h4>
-        </a>
-      </div>
-      <div class="cards">
-        <a href="List.html"><img src="/Images/Fantasy.jpeg" alt="">
+        </form>
+        <form class="cards" action='/Section' method="post" >
+          <input class="img" type="submit" style="background-image:url(/Images/Fantasy.jpeg);" value="" >
+          <input type="hidden" name="category" value="Fantasy">
           <h4>Fantasy</h4>
-        </a>
-      </div>
-      <div class="cards">
-        <a href="List.html"><img src="/Images/Crime.jpg" alt="">
+        </form>
+        <form class="cards" action='/Section' method="post" >
+          <input class="img" type="submit" style="background-image:url(/Images/Crime.jpg);" value="" >
+          <input type="hidden" name="category" value="Crime">
           <h4>Crime</h4>
-        </a>
-      </div>
-      <div class="cards">
-        <a href="List.html"><img src="/Images/comics.jpg" alt="">
+        </form>
+        <form class="cards" action='/Section' method="post" >
+          <input class="img" type="submit" style="background-image:url(/Images/comics.jpg);" value="" >
+          <input type="hidden" name="category" value="Comics">
           <h4>Comics</h4>
-        </a>
-      </div>
-      <div class="cards">
-        <a href="List.html"><img src="/Images/SCP.jpg" alt="">
-          <h4>SCP</h4>
-        </a>
-      </div>
-      <div class="cards">
-        <a href="List.html"><img src="/Images/Manga.png" alt="">
+        </form>
+        <form class="cards" action='/Section' method="post" >
+          <input class="img" type="submit" style="background-image:url(/Images/Education.jpg);" value="" >
+          <input type="hidden" name="category" value="Education">
+          <h4>Education</h4>
+        </form>
+        <form class="cards" action='/Section' method="post" >
+          <input class="img" type="submit" style="background-image:url(/Images/Manga.png);" value="" >
+          <input type="hidden" name="category" value="Manga">
           <h4>Manga</h4>
-        </a>
-      </div>
-      <div class="cards">
-        <a href="Romance.html"><img src="/Images/Romance.jpeg" alt="">
+        </form>
+        <form class="cards" action='/Section' method="post" >
+          <input class="img" type="submit" style="background-image:url(/Images/Romance.jpeg);" value="" >
+          <input type="hidden" name="category" value="Romance">
           <h4>Romance</h4>
-        </a>
-      </div>
-      <div class="cards">
-        <a href="List.html"><img src="/Images/SH.jpeg" alt="">
+        </form>
+        <form class="cards" action='/Section' method="post" >
+          <input class="img" type="submit" style="background-image:url(/Images/SH.jpeg);" value="" >
+          <input type="hidden" name="category" value="Self-Help">
           <h4>Self-Help</h4>
-        </a>
-      </div>
+        </form>
     </div>
 
 
