Routing Problem fixed

--- a/Public/HTML/Categories.html
+++ b/Public/HTML/Categories.html
@@ -17,12 +17,11 @@
 
     <div class="menuDiv circle">
       <ul id="topMenu">
-        <!-- <img src="cart.png" height="65"> -->
-        <li class="lt"><a href="HomePage.html">Home</a></li>
-        <li><a>Categories</a></li>
-        <li><a href="List.html">Top Sellers</a></li>
-        <li><a href="AboutUs.html">About us</a></li>
-        <li class="rt"><a href="ContactUs.html">Contact us</a></li>
+        <li class="lt"><a href="/HomePage">Home</a></li>
+        <li><a href="/Categories">Categories</a></li>
+        <li><a href="/topSellers">Top Sellers</a></li>
+        <li><a href="/AboutUs">About us</a></li>
+        <li class="rt"><a href="ContactUs">Contact us</a></li>
       </ul>
     </div>
 
