--- a/Public/HTML/AboutUs.html
+++ b/Public/HTML/AboutUs.html
@@ -20,7 +20,7 @@
       <li><a href="/Categories">Categories</a></li>
       <li><a href="/topSellers">Top Sellers</a></li>
       <li><a href="/AboutUs">About us</a></li>
-      <li class="rt"><a href="ContactUs">Contact us</a></li>
+      <li class="rt"><a href="/ContactUs">Contact us</a></li>
     </ul>
   </div>
 
@@ -35,6 +35,9 @@
         <a class="t" href="SignIn.html">Sign In</a>
         <a class="b" href="SignUp.html">Sign Up</a>
       </div>
+    </div>
+    <div class="cart">
+      <a href="cart.html"><img class="cart_photo" src="/Images/cart.png"></a>
     </div>
   </div>
 
