--- a/Public/HTML/ContactUs.html
+++ b/Public/HTML/ContactUs.html
@@ -19,7 +19,7 @@
       <li><a href="/Categories">Categories</a></li>
       <li><a href="/topSellers">Top Sellers</a></li>
       <li><a href="/AboutUs">About us</a></li>
-      <li class="rt"><a href="ContactUs">Contact us</a></li>
+      <li class="rt"><a href="/ContactUs">Contact us</a></li>
     </ul>
   </div>
 
@@ -34,6 +34,9 @@
         <a class="t" href="SignIn.html">Sign In</a>
         <a class="b" href="SignUp.html">Sign Up</a>
       </div>
+    </div>
+    <div class="cart">
+      <a href="cart.html"><img class="cart_photo" src="/Images/cart.png"></a>
     </div>
   </div>
 
