--- a/Public/HTML/LoggedHomePage.html
+++ b/Public/HTML/LoggedHomePage.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>BOOKWORM</title>
-  <link href="/CSS/Homepage.css" rel="stylesheet" >
+  <link href="/CSS/LoggedHP.css" rel="stylesheet" >
 </head>
 
 <body>
@@ -23,24 +23,25 @@
       <li class="rt"><a href="/ContactUs">Contact us</a></li>
     </ul>
   </div>
-
+ 
   <div class="profile">
     <form>
       <input class="search" type="text" name="Search" id="" placeholder="Search">
       <button class="simg" type="submit"><img src="/Images/search.png" alt=""></button>
     </form>
+    
     <div class="dropdown">
       <a href="profile.html"><img class="prof_photo" src="/Images/profile.png" alt="profile"></a>
       <div class="dropdown-content">
-        <a class="t" href="SignIn.html">Sign In</a>
-        <a class="b" href="SignUp.html">Sign Up</a>
+        <a class="t" href="Profile.html">Profile</a>
+        <a class="b" href="Cart.html">Cart</a>
       </div>
     </div>
     <div class="cart">
-      <a href="cart.html"><img class="cart_photo" src="/Images/cart.png"></a>
+      <img class="cart_photo" src="/Images/cart.png">
     </div>
   </div>
- 
+  
 </header>
 
 <main>
@@ -52,12 +53,12 @@
     </div>
 
     <div class="mySlides">
-      <img class="fade" src="/Images/thrill mystery.jpg" style="width:100%">
+      <img class="fade" src="/HP/thrill mystery.jpg" style="width:100%">
       <div class="text">Most Anticipated Mysteries & Thrillers of Summer 2022</div>
     </div>
 
     <div class="mySlides">
-      <img class="fade" src="/Images/selfhelp.jpg" style="width:100%">
+      <img class="fade" src="/HP/selfhelp.jpg" style="width:100%">
       <div class="text">Best Self-Help Books to Guide You on the Road to Self-Care</div>
     </div>
 
@@ -69,34 +70,34 @@
 
   <div class="Grid">
     <div class="img-wrapper">
-      <img class="blur zoom" src="/Images/Horror.jpg">
+      <img class="blur zoom" src="/HP/Horror.jpg">
       <div class="content fade" onclick="window.location.href = 'HomePage.html';">IT</div>
     </div>
 
     <div class="img-wrapper">
-      <img class="blur zoom" src="/Images/ATTWN.jpg">
+      <img class="blur zoom" src="/HP/ATTWN.jpg">
       <div class="content fade" onclick="window.location.href = 'HomePage.html';">And Then There <br> &nbsp;&nbsp;&nbsp; Were None</div>
     </div>
 
     <div class="img-wrapper">
-      <img class="blur zoom" src="/Images/inj.jpg">
+      <img class="blur zoom" src="/HP/inj.jpg">
       <div class="content fade" onclick="window.location.href = 'HomePage.html';">Injustice: Gods <br>&nbsp;&nbsp;&nbsp; Among Us</div>
     </div>
   </div>
 
   <div class="Grid">
     <div class="img-wrapper">
-      <img class="blur zoom" src="/Images/Manga.png">
+      <img class="blur zoom" src="/HP/Manga.png">
       <div class="content fade" onclick="window.location.href = 'HomePage.html';">Berserk</div>
     </div>
 
     <div class="img-wrapper">
-      <img class="blur zoom" src="/Images/093.jpg">
+      <img class="blur zoom" src="/HP/093.jpg">
       <div class="content fade" onclick="window.location.href = 'HomePage.html';">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;SCP-093: <br> Red Sea Object</div>
     </div>
 
     <div class="img-wrapper">
-      <img class="blur zoom" src="/Images/Dune.jpg">
+      <img class="blur zoom" src="/HP/Dune.jpg">
       <div class="content fade" onclick="window.location.href = 'HomePage.html';">Dune</div>
     </div>
   </div>
@@ -117,8 +118,8 @@
     <ul>
       <li><a href="HomePage.html">Home</a></li>
       <li><a href="Categories.html">Categories</a></li>
-      <li><a href="AboutUs.html">About Us</a></li>
-      <li><a href="ContactUs.html">Contact Us</a></li>
+      <li><a href="About us.html">About Us</a></li>
+      <li><a href="Contact us.html">Contact Us</a></li>
     </ul>
   </div>
   <div class="help">
