--- a/Public/HTML/ContactUs.html
+++ b/Public/HTML/ContactUs.html
@@ -29,7 +29,7 @@
       <button class="simg" type="submit"><img src="/Images/search.png" alt=""></button>
     </form>
     <div class="dropdown">
-      <a href="profile.html"><img class="prof_photo" src="/Images/profile.png" alt="profile"></a>
+      <a href="/profile"><img class="prof_photo" src="/Images/profile.png" alt="profile"></a>
       <div class="dropdown-content">
         <a class="t" href="SignIn.html">Sign In</a>
         <a class="b" href="SignUp.html">Sign Up</a>
