--- a/Public/HTML/SignUp.html
+++ b/Public/HTML/SignUp.html
@@ -6,6 +6,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Lora:ital@1&display=swap" rel="stylesheet">
     <link href="/CSS/SignUp.css" rel="stylesheet" >
+    <link rel="icon" href="/favicon.ico" type="image/x-icon">
     <title>Sign Up</title>
 </head>
 
